--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    
     <link href="https://fonts.googleapis.com/css?family=Reem+Kufi" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
-    <title>website</title>
+    <title>Quanta</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   </head>
   <body>
     <noscript>
